[gd_scene load_steps=11 format=3 uid="uid://xghtyof1n00w"]

[ext_resource type="Texture2D" uid="uid://dshm2k8nivevn" path="res://table.png" id="1_cfh61"]
[ext_resource type="PackedScene" uid="uid://cls4hyqt4tm7c" path="res://player.tscn" id="1_mhswi"]
[ext_resource type="Script" path="res://table.gd" id="1_qdam5"]
[ext_resource type="PackedScene" uid="uid://cjf78474tq1a2" path="res://score_counter.tscn" id="2_jb8cu"]
[ext_resource type="PackedScene" uid="uid://dkr06nqgo1a8i" path="res://ball.tscn" id="2_jvw8o"]
[ext_resource type="PackedScene" uid="uid://mmmx2s7xygn6" path="res://player2.tscn" id="3_xnsb2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4ayx4"]
texture = ExtResource("1_cfh61")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
3:0/0 = 0
0:1/0 = 0
3:1/0 = 0
0:3/0 = 0
1:3/0 = 0
3:3/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_hbqw8"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_4ayx4")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7ngw"]
size = Vector2(22, 777)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o22et"]
size = Vector2(984, 18)

[node name="table" type="Node2D"]
script = ExtResource("1_qdam5")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_hbqw8")
format = 2
layer_0/tile_data = PackedInt32Array(720912, 0, 0, 655375, 196608, 3, 720911, 196608, 0, 655376, 0, 3, 589839, 196608, 1, 589840, 0, 1, 524304, 0, 1, 458768, 0, 1, 393232, 0, 1, 327696, 0, 1, 262160, 0, 1, 196624, 0, 1, 131088, 0, 0, 524303, 196608, 1, 458767, 196608, 1, 393231, 196608, 1, 327695, 196608, 1, 262159, 196608, 1, 196623, 196608, 1, 131087, 196608, 0, 786447, 196608, 3, 851983, 196608, 0, 917519, 196608, 1, 983055, 196608, 1, 1048591, 196608, 1, 1114127, 196608, 1, 1179663, 196608, 1, 1245199, 196608, 1, 1310735, 196608, 1, 1376271, 196608, 3, 1376272, 0, 3, 1310736, 0, 1, 1245200, 0, 1, 1179664, 0, 1, 1114128, 0, 1, 1048592, 0, 1, 983056, 0, 1, 917520, 0, 1, 851984, 0, 0, 786448, 0, 3, 786449, 65536, 3, 851985, 65536, 0, 917521, 65536, 1, 983057, 65536, 1, 1048593, 65536, 1, 1114129, 65536, 1, 1179665, 65536, 1, 1245201, 65536, 1, 1310737, 65536, 1, 786450, 65536, 3, 851986, 65536, 0, 917522, 65536, 1, 983058, 65536, 1, 1048594, 65536, 1, 1114130, 65536, 1, 1179666, 65536, 1, 1245202, 65536, 1, 1310738, 65536, 1, 786451, 65536, 3, 851987, 65536, 0, 917523, 65536, 1, 983059, 65536, 1, 1048595, 65536, 1, 1114131, 65536, 1, 1179667, 65536, 1, 1245203, 65536, 1, 1310739, 65536, 1, 786452, 65536, 3, 851988, 65536, 0, 917524, 65536, 1, 983060, 65536, 1, 1048596, 65536, 1, 1114132, 65536, 1, 1179668, 65536, 1, 1245204, 65536, 1, 1310740, 65536, 1, 786453, 65536, 3, 851989, 65536, 0, 917525, 65536, 1, 983061, 65536, 1, 1048597, 65536, 1, 1114133, 65536, 1, 1179669, 65536, 1, 1245205, 65536, 1, 1310741, 65536, 1, 786454, 65536, 3, 851990, 65536, 0, 917526, 65536, 1, 983062, 65536, 1, 1048598, 65536, 1, 1114134, 65536, 1, 1179670, 65536, 1, 1245206, 65536, 1, 1310742, 65536, 1, 786455, 65536, 3, 851991, 65536, 0, 917527, 65536, 1, 983063, 65536, 1, 1048599, 65536, 1, 1114135, 65536, 1, 1179671, 65536, 1, 1245207, 65536, 1, 1310743, 65536, 1, 786456, 65536, 3, 851992, 65536, 0, 917528, 65536, 1, 983064, 65536, 1, 1048600, 65536, 1, 1114136, 65536, 1, 1179672, 65536, 1, 1245208, 65536, 1, 1310744, 65536, 1, 786457, 65536, 3, 851993, 65536, 0, 917529, 65536, 1, 983065, 65536, 1, 1048601, 65536, 1, 1114137, 65536, 1, 1179673, 65536, 1, 1245209, 65536, 1, 1310745, 65536, 1, 786458, 65536, 3, 851994, 65536, 0, 917530, 65536, 1, 983066, 65536, 1, 1048602, 65536, 1, 1114138, 65536, 1, 1179674, 65536, 1, 1245210, 65536, 1, 1310746, 65536, 1, 786459, 65536, 3, 851995, 65536, 0, 917531, 65536, 1, 983067, 65536, 1, 1048603, 65536, 1, 1114139, 65536, 1, 1179675, 65536, 1, 1245211, 65536, 1, 1310747, 65536, 1, 786460, 65536, 3, 851996, 65536, 0, 917532, 65536, 1, 983068, 65536, 1, 1048604, 65536, 1, 1114140, 65536, 1, 1179676, 65536, 1, 1245212, 65536, 1, 1310748, 65536, 1, 786461, 196608, 3, 851997, 196608, 0, 917533, 196608, 1, 983069, 196608, 1, 1048605, 196608, 1, 1114141, 196608, 1, 1179677, 196608, 1, 1245213, 196608, 1, 1310749, 196608, 1, 786434, 0, 3, 851970, 0, 0, 917506, 0, 1, 983042, 0, 1, 1048578, 0, 1, 1114114, 0, 1, 1179650, 0, 1, 1245186, 0, 1, 1310722, 0, 1, 786435, 65536, 3, 851971, 65536, 0, 917507, 65536, 1, 983043, 65536, 1, 1048579, 65536, 1, 1114115, 65536, 1, 1179651, 65536, 1, 1245187, 65536, 1, 1310723, 65536, 1, 786436, 65536, 3, 851972, 65536, 0, 917508, 65536, 1, 983044, 65536, 1, 1048580, 65536, 1, 1114116, 65536, 1, 1179652, 65536, 1, 1245188, 65536, 1, 1310724, 65536, 1, 786437, 65536, 3, 851973, 65536, 0, 917509, 65536, 1, 983045, 65536, 1, 1048581, 65536, 1, 1114117, 65536, 1, 1179653, 65536, 1, 1245189, 65536, 1, 1310725, 65536, 1, 786438, 65536, 3, 851974, 65536, 0, 917510, 65536, 1, 983046, 65536, 1, 1048582, 65536, 1, 1114118, 65536, 1, 1179654, 65536, 1, 1245190, 65536, 1, 1310726, 65536, 1, 786439, 65536, 3, 851975, 65536, 0, 917511, 65536, 1, 983047, 65536, 1, 1048583, 65536, 1, 1114119, 65536, 1, 1179655, 65536, 1, 1245191, 65536, 1, 1310727, 65536, 1, 786440, 65536, 3, 851976, 65536, 0, 917512, 65536, 1, 983048, 65536, 1, 1048584, 65536, 1, 1114120, 65536, 1, 1179656, 65536, 1, 1245192, 65536, 1, 1310728, 65536, 1, 786441, 65536, 3, 851977, 65536, 0, 917513, 65536, 1, 983049, 65536, 1, 1048585, 65536, 1, 1114121, 65536, 1, 1179657, 65536, 1, 1245193, 65536, 1, 1310729, 65536, 1, 786442, 65536, 3, 851978, 65536, 0, 917514, 65536, 1, 983050, 65536, 1, 1048586, 65536, 1, 1114122, 65536, 1, 1179658, 65536, 1, 1245194, 65536, 1, 1310730, 65536, 1, 786443, 65536, 3, 851979, 65536, 0, 917515, 65536, 1, 983051, 65536, 1, 1048587, 65536, 1, 1114123, 65536, 1, 1179659, 65536, 1, 1245195, 65536, 1, 1310731, 65536, 1, 786444, 65536, 3, 851980, 65536, 0, 917516, 65536, 1, 983052, 65536, 1, 1048588, 65536, 1, 1114124, 65536, 1, 1179660, 65536, 1, 1245196, 65536, 1, 1310732, 65536, 1, 786445, 65536, 3, 851981, 65536, 0, 917517, 65536, 1, 983053, 65536, 1, 1048589, 65536, 1, 1114125, 65536, 1, 1179661, 65536, 1, 1245197, 65536, 1, 1310733, 65536, 1, 786446, 65536, 3, 851982, 65536, 0, 917518, 65536, 1, 983054, 65536, 1, 1048590, 65536, 1, 1114126, 65536, 1, 1179662, 65536, 1, 1245198, 65536, 1, 1310734, 65536, 1, 131074, 0, 0, 196610, 0, 1, 262146, 0, 1, 327682, 0, 1, 393218, 0, 1, 458754, 0, 1, 524290, 0, 1, 589826, 0, 1, 131075, 65536, 0, 196611, 65536, 1, 262147, 65536, 1, 327683, 65536, 1, 393219, 65536, 1, 458755, 65536, 1, 524291, 65536, 1, 589827, 65536, 1, 131076, 65536, 0, 196612, 65536, 1, 262148, 65536, 1, 327684, 65536, 1, 393220, 65536, 1, 458756, 65536, 1, 524292, 65536, 1, 589828, 65536, 1, 131077, 65536, 0, 196613, 65536, 1, 262149, 65536, 1, 327685, 65536, 1, 393221, 65536, 1, 458757, 65536, 1, 524293, 65536, 1, 589829, 65536, 1, 131078, 65536, 0, 196614, 65536, 1, 262150, 65536, 1, 327686, 65536, 1, 393222, 65536, 1, 458758, 65536, 1, 524294, 65536, 1, 589830, 65536, 1, 131079, 65536, 0, 196615, 65536, 1, 262151, 65536, 1, 327687, 65536, 1, 393223, 65536, 1, 458759, 65536, 1, 524295, 65536, 1, 589831, 65536, 1, 131080, 65536, 0, 196616, 65536, 1, 262152, 65536, 1, 327688, 65536, 1, 393224, 65536, 1, 458760, 65536, 1, 524296, 65536, 1, 589832, 65536, 1, 131081, 65536, 0, 196617, 65536, 1, 262153, 65536, 1, 327689, 65536, 1, 393225, 65536, 1, 458761, 65536, 1, 524297, 65536, 1, 589833, 65536, 1, 131082, 65536, 0, 196618, 65536, 1, 262154, 65536, 1, 327690, 65536, 1, 393226, 65536, 1, 458762, 65536, 1, 524298, 65536, 1, 589834, 65536, 1, 131083, 65536, 0, 196619, 65536, 1, 262155, 65536, 1, 327691, 65536, 1, 393227, 65536, 1, 458763, 65536, 1, 524299, 65536, 1, 589835, 65536, 1, 131084, 65536, 0, 196620, 65536, 1, 262156, 65536, 1, 327692, 65536, 1, 393228, 65536, 1, 458764, 65536, 1, 524300, 65536, 1, 589836, 65536, 1, 131085, 65536, 0, 196621, 65536, 1, 262157, 65536, 1, 327693, 65536, 1, 393229, 65536, 1, 458765, 65536, 1, 524301, 65536, 1, 589837, 65536, 1, 131086, 65536, 0, 196622, 65536, 1, 262158, 65536, 1, 327694, 65536, 1, 393230, 65536, 1, 458766, 65536, 1, 524302, 65536, 1, 589838, 65536, 1, 131089, 65536, 0, 196625, 65536, 1, 262161, 65536, 1, 327697, 65536, 1, 393233, 65536, 1, 458769, 65536, 1, 524305, 65536, 1, 589841, 65536, 1, 131090, 65536, 0, 196626, 65536, 1, 262162, 65536, 1, 327698, 65536, 1, 393234, 65536, 1, 458770, 65536, 1, 524306, 65536, 1, 589842, 65536, 1, 131091, 65536, 0, 196627, 65536, 1, 262163, 65536, 1, 327699, 65536, 1, 393235, 65536, 1, 458771, 65536, 1, 524307, 65536, 1, 589843, 65536, 1, 131092, 65536, 0, 196628, 65536, 1, 262164, 65536, 1, 327700, 65536, 1, 393236, 65536, 1, 458772, 65536, 1, 524308, 65536, 1, 589844, 65536, 1, 131093, 65536, 0, 196629, 65536, 1, 262165, 65536, 1, 327701, 65536, 1, 393237, 65536, 1, 458773, 65536, 1, 524309, 65536, 1, 589845, 65536, 1, 131094, 65536, 0, 196630, 65536, 1, 262166, 65536, 1, 327702, 65536, 1, 393238, 65536, 1, 458774, 65536, 1, 524310, 65536, 1, 589846, 65536, 1, 131095, 65536, 0, 196631, 65536, 1, 262167, 65536, 1, 327703, 65536, 1, 393239, 65536, 1, 458775, 65536, 1, 524311, 65536, 1, 589847, 65536, 1, 131096, 65536, 0, 196632, 65536, 1, 262168, 65536, 1, 327704, 65536, 1, 393240, 65536, 1, 458776, 65536, 1, 524312, 65536, 1, 589848, 65536, 1, 131097, 65536, 0, 196633, 65536, 1, 262169, 65536, 1, 327705, 65536, 1, 393241, 65536, 1, 458777, 65536, 1, 524313, 65536, 1, 589849, 65536, 1, 131098, 65536, 0, 196634, 65536, 1, 262170, 65536, 1, 327706, 65536, 1, 393242, 65536, 1, 458778, 65536, 1, 524314, 65536, 1, 589850, 65536, 1, 131099, 65536, 0, 196635, 65536, 1, 262171, 65536, 1, 327707, 65536, 1, 393243, 65536, 1, 458779, 65536, 1, 524315, 65536, 1, 589851, 65536, 1, 131100, 65536, 0, 196636, 65536, 1, 262172, 65536, 1, 327708, 65536, 1, 393244, 65536, 1, 458780, 65536, 1, 524316, 65536, 1, 589852, 65536, 1, 131101, 196608, 0, 196637, 196608, 1, 262173, 196608, 1, 327709, 196608, 1, 393245, 196608, 1, 458781, 196608, 1, 524317, 196608, 1, 589853, 196608, 1, 1376270, 65536, 3, 1376258, 0, 3, 1376259, 65536, 3, 1376260, 65536, 3, 1376261, 65536, 3, 1376262, 65536, 3, 1376263, 65536, 3, 1376264, 65536, 3, 1376265, 65536, 3, 1376266, 65536, 3, 1376267, 65536, 3, 1376268, 65536, 3, 1376269, 65536, 3, 1376273, 65536, 3, 1376274, 65536, 3, 1376275, 65536, 3, 1376276, 65536, 3, 1376277, 65536, 3, 1376278, 65536, 3, 1376279, 65536, 3, 1376280, 65536, 3, 1376281, 65536, 3, 1376282, 65536, 3, 1376283, 65536, 3, 1376284, 65536, 3, 1376285, 196608, 3, 655389, 196608, 3, 720925, 196608, 0, 655362, 0, 3, 720898, 0, 0, 655363, 65536, 3, 655364, 65536, 3, 655365, 65536, 3, 655366, 65536, 3, 655367, 65536, 3, 655368, 65536, 3, 655369, 65536, 3, 655370, 65536, 3, 655371, 65536, 3, 655372, 65536, 3, 655373, 65536, 3, 655374, 65536, 3, 655377, 65536, 3, 655378, 65536, 3, 655379, 65536, 3, 655380, 65536, 3, 655381, 65536, 3, 655382, 65536, 3, 655383, 65536, 3, 655384, 65536, 3, 655385, 65536, 3, 655386, 65536, 3, 655387, 65536, 3, 655388, 65536, 3, 720913, 65536, 0, 720914, 65536, 0, 720915, 65536, 0, 720916, 65536, 0, 720917, 65536, 0, 720918, 65536, 0, 720919, 65536, 0, 720920, 65536, 0, 720921, 65536, 0, 720922, 65536, 0, 720923, 65536, 0, 720924, 65536, 0, 720899, 65536, 0, 720900, 65536, 0, 720901, 65536, 0, 720902, 65536, 0, 720903, 65536, 0, 720904, 65536, 0, 720905, 65536, 0, 720906, 65536, 0, 720907, 65536, 0, 720908, 65536, 0, 720909, 65536, 0, 720910, 65536, 0)

[node name="player1_goal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player1_goal"]
position = Vector2(1, 378)
shape = SubResource("RectangleShape2D_j7ngw")

[node name="player2_goal" type="Area2D" parent="."]
position = Vector2(1019, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="player2_goal"]
position = Vector2(1, 378)
shape = SubResource("RectangleShape2D_j7ngw")

[node name="ceiling" type="StaticBody2D" parent="."]
position = Vector2(0, 56)
constant_linear_velocity = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ceiling"]
position = Vector2(508, -1)
shape = SubResource("RectangleShape2D_o22et")

[node name="floor" type="StaticBody2D" parent="."]
position = Vector2(0, 712)
constant_linear_velocity = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2(508, -1)
shape = SubResource("RectangleShape2D_o22et")

[node name="score counter" parent="." instance=ExtResource("2_jb8cu")]

[node name="score1" parent="score counter" index="0"]
offset_left = 88.0
offset_top = 80.0
offset_right = 280.0
offset_bottom = 136.0

[node name="score2" parent="score counter" index="1"]
offset_left = 784.0
offset_top = 80.0
offset_right = 968.0
offset_bottom = 128.0

[node name="winner" parent="score counter" index="2"]
visible = false
offset_left = 184.0
offset_top = 464.0
offset_right = 856.0
offset_bottom = 580.0

[node name="Buttons" parent="score counter" index="3"]
process_mode = 3
offset_left = 584.0
offset_top = 592.0
offset_right = 855.0
offset_bottom = 645.0

[node name="Player" parent="." instance=ExtResource("1_mhswi")]
position = Vector2(140, 319)

[node name="Player2" parent="." instance=ExtResource("3_xnsb2")]
position = Vector2(880, 328)

[node name="ball" parent="." instance=ExtResource("2_jvw8o")]
position = Vector2(512, 352)

[connection signal="body_entered" from="player1_goal" to="." method="_on_player_1_goal_body_entered"]
[connection signal="body_entered" from="player2_goal" to="." method="_on_player_2_goal_body_entered"]

[editable path="score counter"]
